k8s/ingress-service.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: ingress-service
  annotations: # additional configuration options for the object
    kubernetes.io/ingress.class: nginx # create ingress controller based on nginx probject
    nginx.ingress.kubernetes.io/use-regex: 'true'
    # how nginx will behave. before forwarding a request, a small rewrite on the URL will occur first
    # it will remove the leading slash (maybe?)
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
    - http:
        paths: # the paths you can match traffic to
          # root path
          - path: /?(.*)
            backend:
              # send request to the pods in this service, on this port
              serviceName: client-cluster-ip-service
              servicePort: 3000
          # path begins with /api
          - path: /api/?(.*)
            backend:
              # send request to the pods in this service
              serviceName: server-cluster-ip-service
              servicePort: 5000
